--- a/status.html
+++ b/status.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="row">
                 <div class="col d-flex justify-content-between align-content-center">
-                    <img src="imagens/logo-header.svg" alt="Logo Conexos">
+                    <a href="index.html" class="logo-link"><img src="imagens/logo-header.svg" alt="Logo Conexos" class="logo-header"></a>
                     <nav>
                         <ul>
                             <li> <a href="index.html">Início</a> </li>
@@ -61,7 +61,7 @@
 <footer>
     <div class="container">
         <div class="row">
-            <img src="imagens/conexos-logo-footer.png" alt="Logo Conexos">
+            <a href="index.html" class="logo-header"><img src="imagens/conexos-logo-footer.png" alt="Logo Conexos"> </a>
         </div>
         <div class="col">
             <p>Empresa criada visando a diversidade dos clientes.<br>
