--- a/bronze.html
+++ b/bronze.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="row">
                 <div class="col d-flex justify-content-between align-content-center">
-                    <img src="imagens/logo-header.svg" alt="Logo Conexos">
+                    <a href="index.html" class="logo-link"><img src="imagens/logo-header.svg" alt="Logo Conexos" class="logo-header"></a>
                     <nav>
                         <ul class="menu">
                             <li> <a href="index.html">Início</a> </li>
@@ -45,8 +45,8 @@
     </header>
 
 
-    <main>
-
+<main>
+    <div class="planos-main">
         <div class="info-planos">
             <h3 class="tittle my-5">Plano Bronze</h3>
             <p>Plano ideal para espaços residenciais com pequenas famílias.
@@ -60,62 +60,72 @@
             </ul>
             <p class="valor">R$ 100,00</p>
         </div>
+            <img src="./imagens/ilustra-1.svg" alt="dois homens simulando uma contratação"
+            width="499px" height="405px">
+    </div>
+    <div class="form-container">
 
-<div class="form-container">
-
-    <div class="card" style="width: 40rem;">
-        <div class="card-body my-2">
-            <form>
-                <h1 class="Titulo-form-plano">Contratação do plano</h1>
-                <div class="card-text">
-                <div class="col-5">
-                    <div class="mb-3">
-                        <label for="nome" class="form-label col-form-label-sm">Nome Completo</label>
-                        <input type="nome" class="form-control" id="Nome">
-                    </div>
-                    <div class="mb-3">
-                        <label for="cpf" class="form-label col-form-label-sm">CPF</label>
-                        <input type="cpf" class="form-control" id="cpf">
-                    </div>
-                    <div class="mb-3">
-                        <label for="Telefone" class="form-label col-form-label-sm">Telefone para contato</label>
-                        <input type="telefone" class="form-control" id="telefone">
-                    </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label col-form-label-sm">Insira seu Email</label>
-                        <input type="email" class="form-control" id="email">
-                    </div>
-                    <div class="mb-3">
-                        <label for="plano" class="form-label col-form-label-sm">Selecione o plano</label>
-                        <select class="form-select">
-                            <option value="1">Bronze</option>
-                            <option value="2">Prata</option>
-                            <option value="3">Ouro</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="plano" class="form-label col-form-label-sm">Preferência de horario para visita
-                            técnica</label>
-                        <select class="form-select">
-                            <option value="1">8:00 ás 12:00</option>
-                            <option value="2">12:00 ás 16:00</option>
-                            <option value="3">16:00 ás 20:00</option>
-                        </select>
+        <div class="card" style="width: 40rem;">
+            <div class="card-body my-2">
+                <form>
+                    <h1 class="Titulo-form-plano">Contratação do plano</h1>
+                    <div class="card-text">
+                        <div class="col-5">
+                            <div class="mb-3">
+                                <label for="nome" class="form-label col-form-label-sm">Nome Completo</label>
+                                <input type="nome" class="form-control" id="Nome">
+                            </div>
+                            <div class="mb-3">
+                                <label for="cpf" class="form-label col-form-label-sm">CPF</label>
+                                <input type="cpf" class="form-control" id="cpf">
+                            </div>
+                            <div class="mb-3">
+                                <label for="Telefone" class="form-label col-form-label-sm">Telefone para contato</label>
+                                <input type="telefone" class="form-control" id="telefone">
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label col-form-label-sm">Insira seu Email</label>
+                                <input type="email" class="form-control" id="email">
+                            </div>
+                            <div class="mb-3">
+                                <label for="plano" class="form-label col-form-label-sm">Selecione o plano</label>
+                                <select class="form-select">
+                                    <option value="1">Bronze</option>
+                                    <option value="2">Prata</option>
+                                    <option value="3">Ouro</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="plano" class="form-label col-form-label-sm">Preferência de horario para
+                                    visita
+                                    técnica</label>
+                                <select class="form-select">
+                                    <option value="1">8:00 ás 12:00</option>
+                                    <option value="2">12:00 ás 16:00</option>
+                                    <option value="3">16:00 ás 20:00</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <div class="d-grid gap">
+                                    <button class="btn btn-primary" type="button">Contratar</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
+            </div>
             </form>
         </div>
     </div>
-</div>
+    </div>
 
 
-    </main>
+</main>
 
     <footer>
         <div class="container">
             <div class="row">
-                <img src="imagens/conexos-logo-footer.png" alt="Logo Conexos">
+                <a href="index.html" class="logo-header"><img src="imagens/conexos-logo-footer.png" alt="Logo Conexos"> </a>
+                <!-- <a href="index.html" class="logo-link"><img src="imagens/logo-header.svg" alt="Logo Conexos" class="logo-header"></a> -->
             </div>
             <div class="col">
                 <p>Empresa criada visando a diversidade dos clientes.<br>
